              other design fixings.
        ==search button review==
            - remove FontAweseom and replace it with SVG
            - set up desgin in every screen-size;
            - add searchform.php for accessible widget search. 
            - difference clearly between widget and header search.
            
    commit #16.9.2
    6 September, 2016
        - content dateresponsive design precision fixings .
        ==Bug==
            -catgory.php: since 16.8.1, </section>section was missing.
        ==sitemap filter==
            /* Boolean filter
            * @ name: manduca_exclude_author_page
            * @ true : default : show authoer pages in sitemap
            * @ false : Do not use author pages
    
    commit #16.9.3
        12 September, 2016.
            Validator: 0 error, 0 warnings. CSS. 0 error 3 warnings (hypens and viewport)
            ==upload to repository as 16.9 ==
            -design fixings,
            - Last validator warnings fixed: Now no error, no warnings! 
            - search icon replaced with SVG background in css.
            - add #svg-layer to header.php and footer.php
            - style.css has 3 warnings in Komodo (hypens and  
            ==bug==
                -header image was smaller than than wrapper. custom-head.php now fixed.
                - fieldset should be set for browser compatibility.
                


version 16.10
    commit #16.10.1
        - 16 September, 2016
        ==bug==
            -widget searchform did not work because I rewrote id="ws".
        ==code optimazation==
            -add nav to breadcrumb
            -add id to top-bar
        ==sitemap developing==
            -not display PDF, if there is none.
            /* Boolean filter
            * @ name: manduca_exclude_author_page
            * @ true : default : show authoer pages in sitemap
            * @ false : Do not use author pages

        
        